# JasperClaw

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  requirements.txt
services/agent-api/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/agent-api/app/: README.md  cli.py  main.py
services/agent-api/app/api/: README.md  deps.py  routes.py
services/agent-api/app/clients/: README.md  ollama.py  search.py  spotify.py  stt.py  telegram.py  tts.py
services/agent-api/app/core/: README.md  auth.py  config.py  errors.py  logging.py  metrics.py
services/agent-api/app/migrations/: README.md  __init__.py  runner.py
services/agent-api/app/persistence/: __init__.py  conversations_repo.py  (+7 more)
services/agent-api/tests/: README.md  conftest.py  test_agent_api_import_smoke.py  test_audio.py  test_auth.py  test_capabilities.py  test_chat_completions.py  test_chat_facade.py  test_chat_flow_integration.py  test_chat_prompt_formatter.py  test_cli.py  test_config.py  test_conversation_resolution.py  test_health.py  test_household_config.py  test_memory_extraction_fixtures.py  test_memory_repository.py  test_memory_retrieval_fixtures.py  test_memory_service.py  test_migrations.py  test_model_runs_repository.py  test_models.py  test_observability.py  test_ollama_client.py  test_pending_tool_confirmation_repository.py  test_readiness.py  test_spotify_client.py  test_tool_execution_repository.py  test_tool_executor.py  test_tool_planner.py  test_tool_policy.py  test_transcript_repository.py
shared_infra/: __init__.py  household_config.py  pyproject.toml
(+263 files in other folders)
