[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "shared-infra"
version = "0.1.0"
description = "Shared infrastructure helpers for local-assistant services"
requires-python = ">=3.12"
dependencies = [
  "psycopg[binary]>=3.2.0,<4.0.0",
]

[tool.setuptools]
packages = ["shared_infra"]

[tool.setuptools.package-dir]
shared_infra = "."
